--- a/almacor-front/src/components/sidebar/ZoneButton.css
+++ b/almacor-front/src/components/sidebar/ZoneButton.css
@@ -1,11 +1,13 @@
 .zone-btn-cont {
     background-color: transparent;
     color: #fff;
+    border: unset;
     border-radius: 10px;
 
     display: flex;
     align-items: center;
 
+    width: 100%;
     margin-top: 10px;
     padding: 10px 15px;
 
