--- a/almacor-front/src/components/orders/OrderButton.css
+++ b/almacor-front/src/components/orders/OrderButton.css
@@ -1,13 +1,12 @@
 .order-button-cont {
     background-color: #fff;
     color: var(--main-font);
-    border: unset;
-    border-radius: 10px;
 
     display: flex;
     align-items: center;
+    justify-content: left !important;
 
-    padding: 10px;
+    padding: 10px !important;
     width: 100%;
 
     cursor: pointer;
