--- a/almacor-front/src/pages/add/AddPage.css
+++ b/almacor-front/src/pages/add/AddPage.css
@@ -1,13 +1,5 @@
-.add-page-cont {
-    display: flex;
-    flex-direction: column;
-
-    background-color: #fff;
-    color: var(--dark-font);
-    border-radius: 12px;
-
-    padding: 15px;
-    max-width: 300px;
+.add-page-card {
+    max-width: 500px;
 }
 
 .add-page-header {
@@ -15,24 +7,11 @@
     margin-bottom: 15px;
 }
 
-.add-page-content {
-    display: flex;
-    flex-direction: column;
-}
-
 .add-page-button {
-    background-color: var(--main-color);
-    color: #fff;
-    border: unset;
-    border-radius: 8px;
-
-    padding: 10px 15px;
-    margin-top: 15px;
-    width: fit-content;
-
-    cursor: pointer;
+    border-radius: 8px !important;
 }
 
-.add-page-button:hover {
-    background-color: var(--main-color-hover);
+.add-page-input {
+    width: 100%;
+    max-width: 300px;
 }
