--- a/almacor-front/src/styles/styles.css
+++ b/almacor-front/src/styles/styles.css
@@ -29,7 +29,7 @@ html, body {
     border: 3px solid var(--main-color);
     border-radius: 3px;
 
-    margin: 10px 0;
+    margin: 5px 0 10px 0;
     width: 20px;
 }
 
