--- a/almacor-front/src/pages/zones/ZonesPage.css
+++ b/almacor-front/src/pages/zones/ZonesPage.css
@@ -1,37 +1,38 @@
 .zones-page-cont {
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
 
-    padding: 15px;
-    height: 75vh;
+    padding: 20px;
+    height: calc(100vh - var(--nav-height) - 40px);
 }
 
 .zones-page-header {
-    display: flex;
-    justify-content: center;
-    text-align: center;
-
-    margin-bottom: 30px;
+    margin-bottom: 20px !important;
 }
 
-.zones-page-zone-buttons {
+.zones-page-card {
     display: flex;
     flex-direction: column;
 
+    padding: 15px;
+    max-width: 500px;
+
+    overflow: hidden;
+}
+
+.zones-page-buttons-cont {
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+
     border-radius: 12px;
 
-    margin: 0 auto;
-    width: 100%;
-    max-width: 450px;
-    height: fit-content;
-    max-height: 400px;
-
+    margin-top: 15px;
+    max-height: 100%;
+    
     overflow: auto;
 }
 
 .zones-page-zone-button {
     padding: 12px !important;
-    margin-bottom: 15px !important;
 }
