--- a/almacor-front/src/components/zone-menu/ZoneMenu.css
+++ b/almacor-front/src/components/zone-menu/ZoneMenu.css
@@ -39,6 +39,21 @@
     width: 100%;
 }
 
+
+@media (max-width: 768px) {
+    .zone-menu-side-bar {
+        position: fixed;
+        left: -100%;
+
+        height: 100%;
+    }
+
+    .zone-menu-side-bar.open {
+        width: 250px;
+        left: 0;
+    }
+}
+
 @media (max-width: 500px) {
     .zone-menu-side-bar {
         position: fixed;
@@ -48,7 +63,7 @@
     }
 
     .zone-menu-side-bar.open {
-        width: calc(100% - 20px);
+        width: calc(100vw - 20px);
         left: 0;
     }
 }
