--- a/almacor-front/src/pages/locate/LocatePage.css
+++ b/almacor-front/src/pages/locate/LocatePage.css
@@ -6,13 +6,21 @@
     max-width: 500px;
 }
 
-.add-page-card-header {
-    display: flex;
-    justify-content: space-between;
+.add-page-card-header span {
+    font-weight: 400;
+    opacity: 50%;
 }
 
-.add-page-label {
-    margin-top: 5px !important;
+.add-page-input-label-cont {
+    display: flex;
+    justify-content: space-between;
+
+    margin-top: 5px;
+}
+
+.add-page-input-label-cont .detail {
+    font-weight: 400;
+    opacity: 50%;
 }
 
 .step-three.add-page-label {
