--- a/almacor-front/src/pages/locate/LocatePage.css
+++ b/almacor-front/src/pages/locate/LocatePage.css
@@ -3,7 +3,7 @@
 }
 
 .add-page-card {
-    max-width: 500px;
+    max-width: 400px;
 }
 
 .add-page-card-header span {
@@ -14,8 +14,6 @@
 .add-page-input-label-cont {
     display: flex;
     justify-content: space-between;
-
-    margin-top: 5px;
 }
 
 .add-page-input-label-cont .detail {
@@ -24,7 +22,7 @@
 }
 
 .step-three.add-page-label {
-    margin: 15px 0 5px 0 !important;
+    margin: 15px 0 !important;
 }
 
 .add-page-inputs-cont{
