--- a/almacor-front/src/pages/inventory/Inventory.css
+++ b/almacor-front/src/pages/inventory/Inventory.css
@@ -6,3 +6,11 @@
     padding: 6px 0;
     width: 100%;
 }
+
+.inv-form-card-cont {
+    margin-bottom: 15px;
+}
+
+.inv-form-card-content {
+    padding: 16px !important;
+}
