--- a/almacor-front/src/pages/inventory/Inventory.css
+++ b/almacor-front/src/pages/inventory/Inventory.css
@@ -7,6 +7,11 @@
     width: 100%;
 }
 
+.inventory-dialog {
+    max-width: 400px !important;
+}
+
 .inventory-form-input {
-    width: 100%;
+    width: 100% !important;
+    min-width: 400px !important;
 }
