--- a/almacor-front/src/components/orders/OrderCard.css
+++ b/almacor-front/src/components/orders/OrderCard.css
@@ -9,17 +9,11 @@
     font-weight: 500;
 }
 
-.order-card-table-cont {
-    display: flex;
-    flex-direction: column;
-    gap: 7px;
-    
-    font-weight: 400;
-}
-
 .order-card-table-item {
     display: flex;
     justify-content: space-between;
+    
+    margin-bottom: 8px;
 }
 
 .order-card-table-item .number {
