--- a/almacor-front/src/pages/login/Login.css
+++ b/almacor-front/src/pages/login/Login.css
@@ -4,21 +4,17 @@
     align-items: center;
     justify-content: center;
 
-    width: 100%;
-    height: 100vh;
+    padding: 20px;
+    height: calc(100vh - 40px);
 }
 
 .login-card {
     width: 100%;
-    max-width: 500px;
+    max-width: 400px;
 }
 
 .login-label {
-    margin-bottom: 10px !important;
-}
-
-.login-label.password {
-    margin-top: 15px !important;
+    margin: 10px 0 !important;
 }
 
 .login-button {
