--- a/almacor-front/src/components/unify/ListedPallet.css
+++ b/almacor-front/src/components/unify/ListedPallet.css
@@ -1,8 +1,10 @@
 .listed-pallet {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
     background-color: rgba(0, 0, 0, .1);
     border-radius: 8px;
-    text-align: center;
 
-    padding: 5px 0;
-    width: 100%;
+    padding: 6px 6px 6px 12px;
 }
