--- a/almacor-front/src/components/orders/OrderCard.css
+++ b/almacor-front/src/components/orders/OrderCard.css
@@ -1,27 +1,47 @@
-.despachado {
-    background-color: rgb(210, 255, 210) !important;
-}
-.order-card-header{ 
-    font-weight: 500 !important;
-}
+/* Card */
 
-.order-card-header .number {
-    font-weight: 500;
-}
 
-.order-card-table-item {
+.card-content {
     display: flex;
-    justify-content: space-between;
-    
-    margin-bottom: 8px;
+    flex-direction: column;
+    gap: 12px;
 }
 
-.order-card-table-item .number {
-    font-weight: 500;
+.order-card-grid {
+    padding: 0 !important;
+}
+
+.order-card-header{
+    border: 1px solid #e5e5e5;
+    border-radius: 8px;
+
+    padding: 6px 8px;
 }
 
 .order-card-button {
     border-radius: 8px !important;
+}
+
+
+/* Pallet Display */
+
+
+.order-card-pallet-display {
+    display: flex;
+    flex-direction: column;
+    gap: 4px;
+}
+
+.pallet-display-cont {
+    background-color: #e5e5e5;
+    border-radius: 8px;
+}
+
+
+/* Removed Card */
+
+.despachado {
+    background-color: rgb(210, 255, 210) !important;
 }
 
 .despachado:disabled {
@@ -29,6 +49,10 @@
     color: var(--main-color) !important;
 }
 
+
+/* Pop Up */
+
+
 .order-card-input {
-    margin-top: 15px !important;
+    margin-top: 12px !important;
 }
