--- a/almacor-front/src/components/zone-menu/ZoneMenu.css
+++ b/almacor-front/src/components/zone-menu/ZoneMenu.css
@@ -17,7 +17,7 @@
     background-color: #fff;
     border-right: 1px solid #e0e0e0;
 
-    padding: 15px 10px;
+    padding: 10px;
     width: fit-content;
     height: calc(100vh - var(--nav-height) - 30px);
 }
